--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,8 @@ footer address {
 
 /*=======Hero=======*/
 .hero {
+    max-width: 1600px;
+    margin: 0 auto;
     padding: 200px 0;
 
     text-align: center;
@@ -333,10 +335,6 @@ footer address {
 
 /*=======Srengths=======*/
 
-.strengths {
-    margin-bottom: 94px;
-}
-
 .strengths-list {
     display: flex;
     padding-left: 0;
@@ -344,7 +342,6 @@ footer address {
 
 .strengths-element {
     width: 270px;
-    height: 101px;
 }
 
 .strengths-element:not(:last-child) {
@@ -370,7 +367,7 @@ footer address {
     align-items: center;
     justify-content: center;
     width: 270px;
-    padding: 25px 100px;
+    height: 120px;
     margin-bottom: 30px;
     background-color: var(--secondary-background);
 }
@@ -490,14 +487,14 @@ footer address {
     fill: var(--icon-color);
 }
 
-.social-media-icon:hover,
-.social-media-icon:focus {
-    fill: #FFFFFF;
-}
-
 .social-media-link:hover,
 .social-media-link:focus {
-    background-color: var(--accent-color)
+    background-color: var(--accent-color);    
+}
+
+.social-media-link:hover .social-media-icon,
+.social-media-link:focus .social-media-icon {
+    fill: #FFFFFF;  
 }
 
 /*======= Постоянные клиенты =======*/
@@ -540,8 +537,8 @@ footer address {
     fill: var(--icon-color);
 }
 
-.clients-list-icon:hover,
-.clients-list-icon:focus {
+.clients-list-link:hover .clients-list-icon,
+.clients-list-link:focus .clients-list-icon {
     fill: var(--accent-color);
 }
 
@@ -607,7 +604,6 @@ footer address {
     margin-bottom: 30px;
 
     width: 370px;
-    height: 404px;
 }
 
 .works-element:nth-child(3n+3) {
@@ -618,12 +614,17 @@ footer address {
     margin-bottom: 0;
 }
 
-.works-element:hover,
-.works-element:focus {
-    border: solid 1px rgba(238, 238, 238, 1);
+.works-element-link {
+    display: block;
+    color: var(--text-color);
+}
+
+.works-element-link:hover,
+.works-element-link:focus {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16),
     0 4px 4px rgba(0, 0, 0, 0.06);
 }
+
 
 .works-element-box {
     padding: 20px 24px;
@@ -636,9 +637,6 @@ footer address {
 }
 
 .works-title {
-    /*margin-left: 24px;
-    margin-right: 24px;
-    padding-top: 20px;*/
     margin-bottom: 4px;
 
     font-weight: 700;
